--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
     <title>webpack basics</title>
   </head>
   <body>
-    <h1>Это наш HTML-файл qweqweqw</h1>
+    <h1>Это наш HTML-файл, Privet Medved!</h1>
   </body>
 </html>
